JumpScript/tests/baselines/reference/unaryOperators1.errors.txt
tests/cases/compiler/unaryOperators1.jump(1,2): error TS2304: Cannot find name 'foo'.
tests/cases/compiler/unaryOperators1.jump(2,2): error TS2304: Cannot find name 'bar'.
tests/cases/compiler/unaryOperators1.jump(3,2): error TS2304: Cannot find name 'quux'.


==== tests/cases/compiler/unaryOperators1.jump (3 errors) ====
    +foo;
     ~~~
!!! error TS2304: Cannot find name 'foo'.
    -bar;
     ~~~
!!! error TS2304: Cannot find name 'bar'.
    ~quux;
     ~~~~
!!! error TS2304: Cannot find name 'quux'.